--- a/calculator/index.html
+++ b/calculator/index.html
@@ -12,23 +12,23 @@
 
             <div class="buttons">
                 <button class="item item1 clear">AC</button>
-                <button class="item item1 negative">+/-</button>
-                <button class="item percent sign">%</button>
-                <button class="item item3 sign">/</button>
-                <button class="item numbers">7</button>
-                <button class="item numbers">8</button>
-                <button class="item numbers">9</button>
-                <button class="item item3 sign">x</button>
-                <button class="item numbers">4</button>
-                <button class="item numbers">5</button>
-                <button class="item numbers">6</button>
-                <button class="item item3 sign">-</button>
-                <button class="item numbers">1</button>
-                <button class="item numbers">2</button>
-                <button class="item numbers">3</button>
-                <button class="item item3 sign">+</button>
-                <button class="item itemZero numbers">0</button>
-                <button class="item comma">,</button>
+                <button class="item item1 negative" value="+/-">+/-</button>
+                <button class="item percent sign" value="%">%</button>
+                <button class="item item3 sign" value="/">/</button>
+                <button class="item numbers" value="7">7</button>
+                <button class="item numbers" value="8">8</button>
+                <button class="item numbers" value="9">9</button>
+                <button class="item item3 sign" value="x">x</button>
+                <button class="item numbers" value="4">4</button>
+                <button class="item numbers" value="5">5</button>
+                <button class="item numbers" value="6">6</button>
+                <button class="item item3 sign" value="-">-</button>
+                <button class="item numbers" value="1">1</button>
+                <button class="item numbers" value="2">2</button>
+                <button class="item numbers" value="3">3</button>
+                <button class="item item3 sign" value="+">+</button>
+                <button class="item itemZero numbers" value="0">0</button>
+                <button class="item comma">.</button>
                 <button class="item item3 equals">=</button>
             </div>
             
