--- a/funnel/index.html
+++ b/funnel/index.html
@@ -16,28 +16,28 @@
             <div class="card-metrics">
                 <h1>Métricas</h1>
                 <div class="textfield">
-                    <label for="valor-gasto">Valor Gasto</label>
+                    <label for="valor-gasto" class="title">*Valor Gasto</label>
                     <input class="input valorGasto" type="text" name="valor-gasto" placeholder="Valor Gasto">
                 </div>
 
                 <div class="textfield">
-                    <label for="cliques">Cliques</label>
+                    <label for="cliques" class="title">*Cliques</label>
                     <input class="input cliques" name="cliques" placeholder="Cliques">
                 </div>
 
                 
                 <div class="textfield">
-                    <label for="pv">Page View</label>
+                    <label for="pv" class="title">*Page View</label>
                     <input class="input pagView" name="pv" placeholder="pv">
                 </div>
 
                 <div class="textfield">
-                    <label for="cpm">CPM</label>
+                    <label for="cpm" class="title">*CPM</label>
                     <input class="input cpm" name="cpm" placeholder="CPM">
                 </div>
 
                 <div class="textfield">
-                    <label for="ctr">CTR</label>
+                    <label for="ctr" class="title">*CTR</label>
                     <input class="input ctr" name="ctr" placeholder="CTR">
                 </div>
                 <button onclick="window.location.href = '#meio-da-tela'" id="botao-resolver-gargalo" class="btn">Encontrar Gargalo</button>
